syntax = "proto3";

package com.example.javagrpc;

option java_multiple_files = true;
option java_package = "com.example.javagrpc";

message GreetingRequest {
  string message = 1;
}

message GreetingResponse {
  string message = 1;
}


service GreetingService {
  rpc greeting(GreetingRequest) returns (GreetingResponse) {
  }
}

